[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/levelup.gd" type="Script" id=1]
[ext_resource path="res://8bit_wonder/8-BIT WONDER.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://UI/score.gd" type="Script" id=3]
[ext_resource path="res://UI/basic UI.tres" type="Theme" id=4]
[ext_resource path="res://sounds/yeah.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 10
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="levelup" type="CanvasLayer"]
pause_mode = 2
layer = 60

[node name="levelup" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="levelup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.164706, 0.47451, 0.776471, 0.313726 )

[node name="CenterContainer" type="CenterContainer" parent="levelup/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="levelup/ColorRect/CenterContainer"]
margin_left = 230.0
margin_top = 113.0
margin_right = 410.0
margin_bottom = 247.0

[node name="title" type="Label" parent="levelup/ColorRect/CenterContainer/VBoxContainer"]
margin_right = 180.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "WEll DONE"

[node name="VSplitContainer3" type="VSplitContainer" parent="levelup/ColorRect/CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 180.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 20 )

[node name="score" type="Label" parent="levelup/ColorRect/CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 180.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.996078, 0.956863, 0.0313726, 1 )
script = ExtResource( 3 )

[node name="VSplitContainer2" type="VSplitContainer" parent="levelup/ColorRect/CenterContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 180.0
margin_bottom = 82.0
rect_min_size = Vector2( 0, 20 )

[node name="replay" type="Button" parent="levelup/ColorRect/CenterContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 180.0
margin_bottom = 96.0
theme = ExtResource( 4 )
text = "Replay"

[node name="VSplitContainer" type="VSplitContainer" parent="levelup/ColorRect/CenterContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 180.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 20 )

[node name="quit" type="Button" parent="levelup/ColorRect/CenterContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 180.0
margin_bottom = 134.0
theme = ExtResource( 4 )
text = "QUIT"

[node name="victory" type="AudioStreamPlayer" parent="levelup"]
stream = ExtResource( 5 )
[connection signal="playwin" from="levelup" to="levelup" method="_on_levelup_playwin"]
[connection signal="pressed" from="levelup/ColorRect/CenterContainer/VBoxContainer/replay" to="levelup" method="_on_replay_pressed"]
[connection signal="pressed" from="levelup/ColorRect/CenterContainer/VBoxContainer/quit" to="levelup" method="_on_quit_pressed"]
